--- a/blog_app/static/blog_app/css/styles.css
+++ b/blog_app/static/blog_app/css/styles.css
@@ -1,16 +1,16 @@
-/* Reset some basic elements */
+
 html, body {
     margin: 0;
     padding: 0;
     width: 100%;
     height: 100%;
-    font-family: Arial, sans-serif; /* Example font */
+    font-family: Arial, sans-serif; /* font */
 }
 
 /* Style the navbar */
 .navbar {
     width: 100%;
-    background-color: #007bff; /* Bootstrap primary color */
+    background-color: #007bff; /* primary color */
     color: white;
     padding: 10px 0;
 }
@@ -39,5 +39,5 @@ footer {
 body {
     position: relative;
     min-height: 100vh;
-    padding-bottom: 50px; /* Adjust based on footer height to ensure content doesn't overlap */
+    padding-bottom: 50px; 
 }
