--- a/blog_app/templates/blog_app/base.html
+++ b/blog_app/templates/blog_app/base.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <title>{% block title %}Blog App{% endblock title %}</title>
     <link rel="stylesheet" href="{% static 'blog_app/css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'blog_app/css/post.css' %}">
+    <link rel="stylesheet" href="{% static 'blog_app/css/posts.css' %}">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
