Created form for new post, added css for new post, added new_post.html template, added new_post view, added url for new post

--- a/blog_app/static/blog_app/css/posts.css
+++ b/blog_app/static/blog_app/css/posts.css
@@ -32,4 +32,26 @@
 }
 
 .post-summary a:hover {
-    text-decoration: underline; 
+    text-decoration: underline;
+}
+
+.new_post{
+    text-decoration: none;
+    
+}
+
+.new-post-btn {
+    display: inline-block;
+    background-color: #007bff;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-decoration: none; 
+    text-align: center;
+    margin-top: 20px; 
+    cursor: pointer;
+}
+
+.new-post-btn:hover {
+    background-color: #0056b3; 
+}
