--- a/blog_app/static/blog_app/css/styles.css
+++ b/blog_app/static/blog_app/css/styles.css
@@ -13,6 +13,7 @@ html, body {
     background-color: #007bff; /* primary color */
     color: white;
     padding: 10px 0;
+    margin-bottom: 30px;
 }
 
 .navbar a {
