--- a/blog_app/templates/blog_app/base.html
+++ b/blog_app/templates/blog_app/base.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="{% static 'blog_app/css/styles.css' %}">
     <link rel="stylesheet" href="{% static 'blog_app/css/post.css' %}">
     <link rel="stylesheet" href="{% static 'blog_app/css/posts.css' %}">
+    <link rel="stylesheet" href="{% static 'blog_app/css/index.css' %}">
+    <link rel="stylesheet" href="{% static 'blog_app/css/new_post.css' %}">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
