Added ability to edit entries Added ability to addi new entries Created pagees for new entry and edit entry Added css for new entry and edit entry Added functions to views.py for new entry and edit entry Added paths to urls.py for new entry and edit entry Added forms for new entry and edit entry Created new accounts app with login page and css Added style for login page

--- a/blog_app/static/blog_app/css/post.css
+++ b/blog_app/static/blog_app/css/post.css
@@ -1,16 +1,8 @@
-/* post.css */
 
-
-body {
-    margin: 0;
-    padding: 20px;
-    font-family: Arial, sans-serif; 
-    background-color: #f8f9fa; /* Light grey background for a subtle, modern look */
-}
-
-/* Container for the post content to center it and constrain its width */
+/* post content */
 .post-container {
     max-width: 80%;
+    padding: 20px;
     margin: auto;
     background-color: white; 
     padding: 20px;
@@ -54,4 +46,16 @@ body {
 ul, ol {
     list-style-type: none; /* removes styles */
     padding-left: 0; 
+}
+
+.new-entry-btn {
+    display: inline-block;
+    background-color: #007bff;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-decoration: none;
+    text-align: center;
+    margin-top: 20px;
+    cursor: pointer;
 }
