--- a/blog_app/templates/blog_app/base.html
+++ b/blog_app/templates/blog_app/base.html
@@ -22,6 +22,10 @@
         <div class="auth-links">
             {% if user.is_authenticated %}
                 Hello, {{ user.username }}.
+                <form action="{% url 'accounts:logout' %}" method="post">
+                    {% csrf_token %}
+                    <button type="submit" class="logout-button">Logout</button>
+                </form>
             {% else %}
                 <a href="{% url 'accounts:login' %}">Log in</a>
             {% endif %}
