Adding a registration form to the blog app Added registration function to view file Added registration form to the template Added registration css file Added registration url to the urls file Modified base template to include registration link Modified  style.css to move user and logut btn to the left

--- a/blog_app/templates/blog_app/base.html
+++ b/blog_app/templates/blog_app/base.html
@@ -21,12 +21,13 @@
         </div>
         <div class="auth-links">
             {% if user.is_authenticated %}
-                Hello, {{ user.username }}.
+                Hello, {{ user.username }}
                 <form action="{% url 'accounts:logout' %}" method="post">
                     {% csrf_token %}
                     <button type="submit" class="logout-button">Logout</button>
                 </form>
             {% else %}
+                <a href="{% url 'accounts:register' %}">Register</a>
                 <a href="{% url 'accounts:login' %}">Log in</a>
             {% endif %}
         </div>
