--- a/blog_app/templates/blog_app/post.html
+++ b/blog_app/templates/blog_app/post.html
@@ -5,14 +5,16 @@
 {% block content %}
 <div class="post-container">
     <h1 class="post-title">{{ post.title }}</h1>
-    
+    <div class="post-underline"></div>
     <div class="entries">
         <ul>
             {% for entry in entries %}
-              <li class="entry">
-                <p class="post-date">{{ entry.date_added|date:"M d, Y H:i" }}</p>
+              <li class="date">
+                <div class="date-and-edit">
+                <p class="post-date">{{ entry.date_added|date:"M d, Y H:i" }}<a class="edit-entry-btn" href="{% url 'blog_app:edit_entry' entry.id %}">Edit entry</a></p>
+                </div>
                 <div class="post-content">{{ entry.text|linebreaks }}</div>
-                <a class="new-entry-btn" href="{% url 'blog_app:edit_entry' entry.id %}">Edit entry</a>
+                
               </li>
             {% empty %}
               <li>No entries yet.</li>
